fix: increase partner logo height for better visibility

--- a/css/structure.css
+++ b/css/structure.css
@@ -292,14 +292,6 @@ b {
   text-align: center;
 }
 
-.partnerLogos {
-  justify-content: center;
-}
-.partnerLogo {
-  height: 70px;
-  margin-bottom: 30px;
-}
-
 @media (max-width: 550px) {
   .burger-menu {
     display: block;
